--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-mediapipe==0.10.11
-tensorflow==2.16.1
-keras==3.1.1
-numpy==1.26.4
-opencv-python==4.9.0.80
+opencv-python
+numpy
+mediapipe
+scikit-learn
+tensorflow
+keras
+matplotlib
+seaborn
